<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_background"
    >

    <include layout="@layout/toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login_fail_content_title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="28sp"
        android:textColor="@color/login_fail_content_title"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_fail_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/content"
        />

    <Button
        android:id="@+id/login_fail_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/login_fail_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/buttonstyle"
        android:layout_marginTop="60dp"
        />

    <TextView
        android:id="@+id/login_fail_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingLeft="20dp"
        android:text="@string/login_fail_help"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="40dp"
        android:textColor="@color/tool_background"
        android:autoLink="all"
        />

</LinearLayout>