<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_background"
    >

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:layout_marginTop="20dp"
        android:background="@color/whitecolor"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:layout_marginLeft="20dp"
            android:textColor="@color/blackcolor"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/login_font_color"
            android:background="@null"
            android:textCursorDrawable="@null"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/login_background" />
        <EditText
            android:id="@+id/hospital"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hospital"
            android:layout_marginLeft="20dp"
            android:textColor="@color/blackcolor"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/login_font_color"
            android:background="@null"
            android:textCursorDrawable="@null"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/login_background" />
        <EditText
            android:id="@+id/department"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/department"
            android:layout_marginLeft="20dp"
            android:textColor="@color/blackcolor"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/login_font_color"
            android:background="@null"
            android:textCursorDrawable="@null"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/login_background" />

        <LinearLayout
            android:id="@+id/positional"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <TextView
                android:id="@+id/positionaltitles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/content"
                android:textCursorDrawable="@null"
                android:gravity="center_vertical"
                android:text="@string/positionaltitles"
                android:background="@null"
                />
            <TextView
                android:id="@+id/positionalname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/positional"
                android:textColor="@color/content"
                android:gravity="center_vertical"
                android:drawableRight="@drawable/into"
                android:drawablePadding="6dp"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/login_background" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:background="@color/whitecolor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/register_remind"
        android:drawableLeft="@drawable/remind"
        android:textColor="@color/remind"
        android:gravity="center_vertical"
        android:drawablePadding="4dp"
        />
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/input_register"
        android:textColor="@color/tool_font_color"
        />


</LinearLayout>