<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_background"
    >

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginTop="20dp"
        android:background="@color/whitecolor"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_username"
            android:layout_marginLeft="20dp"
            android:textColor="@color/blackcolor"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/login_font_color"
            android:maxLength="11"
            android:inputType="phone"
            android:background="@null"
            android:textCursorDrawable="@null"
            android:text="18964025491"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/login_background" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:textColor="@color/blackcolor"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:textColorHint="@color/login_font_color"
            android:hint="@string/login_password"
            android:background="@null"
            android:text="123456"/>
    </LinearLayout>
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:background="@color/tool_background"
        android:text="@string/login"
        android:textColor="@color/tool_font_color"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/login_font_color"
            android:layout_marginTop="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_password"
            android:textColor="@color/login_font_color"
            android:layout_marginTop="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="20dp"
            android:layout_gravity="right"
            />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>