<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_background"
    >

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_marginTop="20dp"
        android:background="@color/whitecolor"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_username"
                android:textColor="@color/blackcolor"
                android:gravity="center_vertical"
                android:textColorHint="@color/login_font_color"
                android:maxLength="11"
                android:inputType="phone"
                android:background="@null"
                android:layout_weight="1"
                android:textCursorDrawable="@null"
                />


                <TextView
                    android:id="@+id/getverification"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/register_getverification"
                    android:textColor="@color/login_font_color"
                    android:layout_margin="6dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/borderstyle"
                    android:paddingRight="6dp"
                    android:paddingLeft="6dp"
                    />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/login_background" />
        <EditText
            android:id="@+id/verification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_verification"
            android:layout_marginLeft="20dp"
            android:textColor="@color/blackcolor"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/login_font_color"
            android:maxLength="11"
            android:inputType="number"
            android:background="@null"
            android:textCursorDrawable="@null"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/login_background" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:textColor="@color/blackcolor"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:textColorHint="@color/login_font_color"
            android:hint="@string/login_new_password"
            android:background="@null"
            />
    </LinearLayout>
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/register_button"
        android:textColor="@color/tool_font_color"
        />


</LinearLayout>